# sphinx-ext-jsindices

./: LICENSE  README.md  pyproject.toml
docs/: make.py
docs/source/: conf.py  examples.rst  index.rst  indices.rst
requirements/: dev.txt  prod.txt
sphinx_ext_jsindices/: __init__.py
